--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 								<li>
 									<a href="#">IT Technologies</a>
 									<ul>
-										<li><a href="#">Autonomous Vehicles</a></li>
-										<li><a href="#">Clouds, servers and services</a></li>
-										<li><a href="#">Machine Learning</a></li>
-										<li><a href="#">Natural Language Processing and Chatterbots</a></li>
+										<li><a href="autonomous-vehicles.html">Autonomous Vehicles</a></li>
+										<li><a href="clouds-servers-services.html">Clouds, servers and services</a></li>
+										<li><a href="machine-learning.html">Machine Learning</a></li>
+										<li><a href="natural-language-processing-and-chatterbots.html">Natural Language Processing and Chatterbots</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
