typo in Services

--- a/clouds-servers-services.html
+++ b/clouds-servers-services.html
@@ -108,7 +108,7 @@
 										We no longer go to stores and search for things, it is simply to open our phone at the moment especially in this pandemic time. 
 									</p>
 									
-									<h5>Servers</h5>
+									<h5>Services</h5>
 									<p>	<b>What are Services?</b>
 										This might be more like a term or definition for some people. 
 										Services are actually the process that connects Servers and Clouds. 
