Image Movement to file

--- a/clouds-servers-services.html
+++ b/clouds-servers-services.html
@@ -55,7 +55,7 @@
 										<p>by Geoffrey Timothy.</p>
 									</header>
 
-									<span class="image featured"><img src="servers.jpg" alt="" /></span>
+									<span class="image featured"><img src="images/servers.jpg" alt="" /></span>
 									
 									<h3>Clouds</h3>
 									<p>	<b>Clouds</b> is basically an invisible storage that stores your data on the internet. 
