--- a/autonomous-vehicles.html
+++ b/autonomous-vehicles.html
@@ -65,7 +65,7 @@
 									this scale and gives an overview of what a vehicle is required to be capable of to be 
 									classified an autonomous vehicle. </p>
 									
-									<span class="image featured"><img src="images/autonomous-vehicles-img1.jpg" alt="" /></span>
+									<img src="images/autonomous-vehicles-img1.jpg" alt="img1" style="width:600px;height:350px;">
 
 									<p>(What is an Autonomous Car? – How Self-Driving Cars Work | Synopsys, 2020)</p>
 									
