--- a/autonomous-vehicles.html
+++ b/autonomous-vehicles.html
@@ -50,6 +50,10 @@
 							<!-- Content -->
 
 								<article>
+									<header>
+										<h2>Autonomous Vehicles</h2>
+										<p>by Nathan Askew.</p>
+									</header>
 
 									<h3>What are autonomous vehicles?</h3>
 									
