--- a/machine-learning.html
+++ b/machine-learning.html
@@ -56,29 +56,81 @@
 									</header>
 
 									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+									<p>	<h1>Machine Learning</h1>
 
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
+Machine learning is a subset of artificial intelligence that has become popular and ubiquitous in recent times.  The reason it has become so popular is that there has been a dramatic increase in computing power and the massive increase in the amount of data that machines can use to learn from.  Also, new powerful algorithms have been developed.<br><br>
+Humans learn from past experiences.  Machine learning is the field where which utilises computers to learn from past data.<br><br>
+“Machine learning is an application of artificial intelligence that provides systems with the ability to automatically learn and improve from experience without be explicitly programmed” (expert system).<br><br>
+There are three different methods of machine learning.  Supervised, unsupervised and reinforcement learning.<br><br>
+Supervised learning is where a machine learns under guidance.  Input data and output data is labelled.  Output data is fed into the algorithm.  The machine knows the output of the algorithm before it starts working.  This is similar to a child being taught at primary school.  (Supervised vs Unsupervised vs Reinforcement Learning | Data Science Certification Training | Edureka)<br><br>
+Unsupervised learning is where a machine learns without supervision.  This is more like how an adult would learn.  This is where the machine is only given input data and has to find patterns in the data on it’s own.  (Supervised vs Unsupervised vs Reinforcement Learning | Data Science Certification Training | Edureka)<br><br>
+Reinforcement learning is where the machine must learn to adapt and learn from its own experience.  The machine explores the environment based on a rewards system.  (Supervised vs Unsupervised vs Reinforcement Learning | Data Science Certification Training | Edureka)<br><br>
+Machine learning has seamlessly blended in many different areas of our lives so much so that you may take advances in machine learning for granted.  Smart phones have been the greatest technological development that has made this possible.  Smartphones have dramatically changed the way we live our lives.  Now we have a powerful computer that we carry around in our pockets that means we all always connected to each other via the internet.<br><br>
+Some of the modern-day applications of ML that people use all the time are google maps, Uber, ads recommendation, facial recognition, Netflix recommendation and google translate.  There are other real world applications such as self driving cars, self learning robots and many advances in diagnosing medical conditions such as diabetic retinopathy.<br><br>
+Google maps takes advantage of ML in traffic predictions.  This is so it will always find the shortest route to your destination.  It has predictive capabilities and real time tracking data.  Everyone who is currently using to the app to get from one location to another is contributing to the real time database so that google maps can improve its directions.  For example if there is an accident or traffic jam, google maps will take this into consideration and will find a detour to your location. (Top 10 Applications of Machine Learning | Machine Learning Application Examples | Edureka)<br><br>
+<br>
+Uber uses ML in a similar way to google maps.  Uber will calculate the best route to your location, the time it will take and how much money it will cost.  It also tells its drivers where to go in order to find customers.<br>
+<br>
+Have you every searched for a product online but realised you didn’t want to buy it.  The next day you look at your facebook feed and there is an advert for the exact product you were searching.  This is the work of ML.  Google tracks your search history.  It then choses advertisements especially tailored for you.<br>
+<br>
+Machine learning is employed in social media platforms, especially with Facebook.  It uses facial recognition to detect faces in photos you upload.  If you upload a picture of yourself with a friend, Facebook will use facial recognition software to automatically identify your friend.  (9 Applications of Machine Learning from Day-to-Day Life)<br>
+Facebook also uses machine learning to suggest “people you know.”  Facebook is constantly noticing people you connect with, profiles you visit, your interests, workplaces and groups.  This is how it identifies people new friends for you.  (9 Applications of Machine Learning from Day-to-Day Life)<br>
+Facebook also uses computer vision which extracts useful information from images and videos, called similar pins.  .  (9 Applications of Machine Learning from Day-to-Day Life)<br>
+<br>
+The iPhone X takes advantage of machine learning with its facial recognition feature.  It uses a variety of hardware including a light emitter, infrared structured light receiver and sensor.  It puts 30000 infrared dots on a users face when they stare at the phone.  This is an example of neural networks.  The only way to fool this is if you have an identical twin.  (Top 10 Applications of Machine Learning | Machine Learning Application Examples | Edureka)<br>
+<br>Telsa’s self driving car is trained on unsupervised machine learning.  The car learns on its own to create an internal representation of the outside world by observing drivers and by taking advantage of its many sensors.<br>
+<br>
+Machine learning is also employed in video surveillance.  Just like the television show “Person of Interest”.  Surveillance cameras are hooked up to an artificial intelligence that makes it possible to detect crime before it happens.  The AI can detect suspicious behaviour.  When the video surveillance notices something suspicious it notifies a human.  (9 Applications of Machine Learning from Day-to-Day Life)<br>
+<br>
+One of the scariest modern applications of machine learning is “deep fake”.  Deep fake is where it is possible to replicate someone’s facial movements and voice onto a separate video so well that is it impossible to tell the difference.  The technology harnesses machine learning technique, feeding the computer real time data to create the fake.  (Deep Fakes: How They’re Made And How They Can Be Detected | Mach | NBC News, 2020).  Data is fed to the algorithm and it can learn the mapping of one person’s face to another.  In the future when this technique is perfected it will be impossible to really tell the identity of someone on a tv screen.<br>
+<br>
+Netflix uses a recommendation system to make guesses of what movies and shows you would like, based on your previous watching.  75% of what people chose to watch is based from these recommendations. (Top 10 Applications of Machine Learning | Machine Learning Application Examples | Edureka)<br><br>
+Google translate is fast, free and accurate. (Top 10 Applications of Machine Learning | Machine Learning Application Examples | Edureka)  It takes advantage of machine learning to translate foreign language.  It uses statistical machine translation, which analyses millions of translated documents to learn vocabulary and look for patterns in data.<br><br>
+The leading cause of blindness in the modern world is diabetic retinopathy.  Blindness caused by diabetes.  Machine learning algorithms can be used to detect damage to blood vessels in the eyes before it becomes a problem by scanning images of the eye.<br>
+<br>
+<br>
+What is the likely impact?<br>
+Machin learning has the potential to have a great positive impact on the world.<br><br>
+Self driving cars that are fully automatous are still maybe a decade off.  But it is only a matter of time.  Self driving cars could eliminate human error that is the cause of road accidents.  There would be no more drink driving accidents.  No more accidents from people falling asleep at the wheel.  Also the elderly would have the ability to be independent, even though they are not fit to drive.  All in all this would make the roads a lot safer and be for everyone.<br><br>
+Google translate is making the world a smaller place.  Tourist and travellers can now read signs written in foreign languages.  Imagine travelling to a foreign country and not having to worry about not knowing the language.  You could find out where to go by yourself and communicate with local residents easily.<br>
+I think the best impact of machine learning will be on people’s health.  Machines can detect the beginnings of a disease before it becomes a problem.  Machines can make more accurate diagnosis from looking at different medical scans.  This could be photos of the eye, x rays, CT scans or MRIs.<br>
+If a machine is able to diagnose, faster and cheaper than a professional doctor, then more people will have access to medical services which can make diagnosis before there is a serious problem.  An example I already mentioned was diabetic retinopathy.  This won’t make doctors redundant, but it will give them time to give medical attention to those who need it more.<br>
+<br>
+How will this affect you?<br>
+One of the biggest affects from machine learning that affects me everyday is google maps.<br>
+I remember the old days where if you wanted to travel somewhere, you had to look it up in the melways and then find the most direct route.  This would usually be along main roads.  If there was two people in the car, one would be driver and the other navigator.  Now all I have to do tell google maps my location and I have the fastest rout to my destination.  Even if there are traffic jams or roadblocks.  This is very convenient.<br>
+Self driving cars would have a huge affect on my life.  Although I own a car, I don’t like to drive long distances.  This means if I want to go on a holiday to the beach, I always take the bus or the train and it takes a very long time.  Self driving cars would be able for me to travel quickly anywhere I want to go.  Giving me much greater independence.<br>
+Machine learning in medical diagnosis would not have much of an impact in my life now that I am young and healthy.  Though it would affect my parents and other family members.<br>
+If they can get a medical diagnosis faster, cheaper and more accurately they are much more likely to live to a long age, be healthier and have a higher quality of life.<br>
+Another effect of machine learning on my life will be that everything on the internet will be tailored to me.  Whenever I log onto the internet everything will be personalised based on my own previous history.  This could be advert coming up in things I want to buy, or facebook recommending a friend of a friend that I have only met once.<br>
+On the whole machine learning has the ability to transform our lives in very positive ways.<br>
+It will make the world smaller, it will give us more freedom and independence and it will bring us closer together.  It is funny that thinking machines can make us more human.<br>
+<br>
+<br>
+Bibliography and references<br>
+<br>
+: 2020. Machine Learning Basics | What Is Machine Learning? | Introduction To Machine Learning | Simplilearn. [online] Available at: <https://www.youtube.com/watch?v=ukzFI9rgwfU> [Accessed 12 September 2020].<br>
+<br>
+2020. Supervised Vs Unsupervised Vs Reinforcement Learning | Data Science Certification Training | Edureka. [online] Available at: <https://www.youtube.com/watch?v=xtOg44r6dsE&t=775s> [Accessed 12 September 2020].<br>
+<br>
+DATAVERSITY. 2020. The Future Of Machine Learning And Artificial Intelligence - DATAVERSITY. [online] Available at: <https://www.dataversity.net/future-machine-learning-artificial-intelligence/> [Accessed 12 September 2020].<br>
+<br>
+2020. The Future Of Machine Learning And Its Impact On Your Everyday Life. [online] Available at: <https://www.youtube.com/watch?v=NjVIQUE8Sgk&t=90s> [Accessed 12 September 2020].<br>
+<br>
+2020. Top 10 Applications Of Machine Learning | Machine Learning Application Examples | Edureka. [online] Available at: <https://www.youtube.com/watch?v=ahRcGObyEZo> [Accessed 7 September 2020].<br>
+<br>
+2020. What Is Machine Learning. [online] Available at: <https://www.youtube.com/watch?v=JFB_751d2uc> [Accessed 12 September 2020].<br>
+<br>
+9 Applications of Machine Learning from Day-to-Day Life<br>
+Medium<br>
+https://medium.com/app-affairs/9-applications-of-machine-learning-from-day-to-day-life-112a47a429d0<br>
+<br>
+2020. Deep Fakes: How They’Re Made And How They Can Be Detected | Mach | NBC News. [online] Available at: <https://www.youtube.com/watch?v=C8FO0P2a3dA> [Accessed 14 September 2020].<br>
+								
+									</p>
 
-									<h3>And Yet Another Subheading</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-									vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-									Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-									rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-									Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-									Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
 
-									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-								</article>
+									</article>
 
 						</div>
 					</div>
