--- a/machine-learning.html
+++ b/machine-learning.html
@@ -89,14 +89,14 @@ Google translate is fast, free and accurate. (Top 10 Applications of Machine Lea
 The leading cause of blindness in the modern world is diabetic retinopathy.  Blindness caused by diabetes.  Machine learning algorithms can be used to detect damage to blood vessels in the eyes before it becomes a problem by scanning images of the eye.<br>
 <br>
 <br>
-What is the likely impact?<br>
+<h1>What is the likely impact?</h1><br>
 Machin learning has the potential to have a great positive impact on the world.<br><br>
 Self driving cars that are fully automatous are still maybe a decade off.  But it is only a matter of time.  Self driving cars could eliminate human error that is the cause of road accidents.  There would be no more drink driving accidents.  No more accidents from people falling asleep at the wheel.  Also the elderly would have the ability to be independent, even though they are not fit to drive.  All in all this would make the roads a lot safer and be for everyone.<br><br>
 Google translate is making the world a smaller place.  Tourist and travellers can now read signs written in foreign languages.  Imagine travelling to a foreign country and not having to worry about not knowing the language.  You could find out where to go by yourself and communicate with local residents easily.<br>
 I think the best impact of machine learning will be on people’s health.  Machines can detect the beginnings of a disease before it becomes a problem.  Machines can make more accurate diagnosis from looking at different medical scans.  This could be photos of the eye, x rays, CT scans or MRIs.<br>
 If a machine is able to diagnose, faster and cheaper than a professional doctor, then more people will have access to medical services which can make diagnosis before there is a serious problem.  An example I already mentioned was diabetic retinopathy.  This won’t make doctors redundant, but it will give them time to give medical attention to those who need it more.<br>
 <br>
-How will this affect you?<br>
+<h1>How will this affect you?</h1><br>
 One of the biggest affects from machine learning that affects me everyday is google maps.<br>
 I remember the old days where if you wanted to travel somewhere, you had to look it up in the melways and then find the most direct route.  This would usually be along main roads.  If there was two people in the car, one would be driver and the other navigator.  Now all I have to do tell google maps my location and I have the fastest rout to my destination.  Even if there are traffic jams or roadblocks.  This is very convenient.<br>
 Self driving cars would have a huge affect on my life.  Although I own a car, I don’t like to drive long distances.  This means if I want to go on a holiday to the beach, I always take the bus or the train and it takes a very long time.  Self driving cars would be able for me to travel quickly anywhere I want to go.  Giving me much greater independence.<br>
