--- a/clouds-servers-services.html
+++ b/clouds-servers-services.html
@@ -132,6 +132,25 @@
 										I also believe that most of my friends and families might use this service Google offered when they are lost with directions.
 									</p>
 									
+									<h6>References</h6>
+									<p> 	1.	 Amazon Web Services, Inc. 2020. What Is Cloud Storage? | AWS. [online] Available at: <https://aws.amazon.com/what-is-cloud-storage/#:~:text=Cloud%20storage%20is%20a%20cloud,your%20own%20data%20storage%20infrastructure.> [Accessed 9 September 2020].
+										<br>
+										2.	 En.wikipedia.org. 2020. Cloud Storage. [online] Available at: <https://en.wikipedia.org/wiki/Cloud_storage> [Accessed 9 September 2020].
+										<br>
+										3.	Team, D., 2020. Features Of Cloud Computing - 10 Major Characteristics Of Cloud Computing - Dataflair. [online] DataFlair. Available at: <https://data-flair.training/blogs/features-of-cloud-computing/> [Accessed 9 September 2020].
+										<br>
+										4.	 Google Cloud Blog. 2020. Future Of Cloud Computing: 5 Insights From New Global Research | Google Cloud Blog. [online] Available at: <https://cloud.google.com/blog/topics/research/future-of-cloud-computing-5-insights-from-new-global-research> [Accessed 9 September 2020].
+										<br>
+										5.	En.wikipedia.org. 2020. Server (Computing). [online] Available at: <https://en.wikipedia.org/wiki/Server_(computing)> [Accessed 9 September 2020].
+										<br>
+										6.	Miller, R., 2020. What Will The Servers Of The Future Look Like?. [online] Data Center Knowledge. Available at: <https://www.datacenterknowledge.com/archives/2012/03/30/what-will-the-servers-of-the-future-look-like> [Accessed 9 September 2020].\
+										<br>
+										7.	services, C., 2020. Computer Services | Legal Definition Of Computer Services By Law Insider. [online] Lawinsider.com. Available at: <https://www.lawinsider.com/dictionary/computer-services#:~:text=Computer%20services%20means%20providing%20access,system%2C%20or%20a%20computer%20network.> [Accessed 10 September 2020].
+										<br>
+										8.	 Neil Patel. 2020. An Inside Look At Google's Future Plans. [online] Available at: <https://neilpatel.com/blog/googles-future/> [Accessed 10 September 2020].
+
+									</p>
+									
 								</article>
 
 						</div>
