Tools Page finished
Geoffrey Timothy

--- a/tools.html
+++ b/tools.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Left Sidebar - Arcana by HTML5 UP</title>
+		<title>Tools</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+						<h1><a href="index.html" id="logo">Tools<em>and Technologies</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -52,27 +52,26 @@
 									<!-- Sidebar -->
 
 										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+											<h3>Introduction</h3>
+											<p>	We all do know that to achieve goals there are sweats and tears behind them. 
+												As well as a technology, it needs tools and some technology in order to make it happen.
+												Tools and Technologies are more like the back-end of this Charity App.
+											</p>
 											<footer>
-												<a href="#" class="button">Continue Reading</a>
 											</footer>
 										</section>
 
 										<section>
-											<h3>Another Subheading</h3>
+											<h3>Links to tools</h3>
 											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit in lectus</a></li>
-												<li><a href="#">Semper mod quis eget mi dolore</a></li>
-												<li><a href="#">Consequat etiam lorem phasellus</a></li>
-												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
+												<li><a href="https://html5up.net/">HTML 5 UP</a></li>
+												<li><a href="https://templated.co/">Templated.co</a></li>
+												<li><a href="https://github.com/">GitHub</a></li>
+												<li><a href="https://bootstrap4.com/">Bootstrap</a></li>
+												<li><a href="https://notepad-plus-plus.org/downloads/">Notepad++</a></li>
 											</ul>
 											<footer>
-												<a href="#" class="button">More Random Links</a>
+												<a href="https://team-indecisive.github.io/The_IT_World/index.html" class="button">Homepage</a>
 											</footer>
 										</section>
 
@@ -85,33 +84,46 @@
 
 										<article>
 											<header>
-												<h2>Left Sidebar</h2>
-												<p>Sidebar on the left, content on the right.</p>
+												<h2>Tools and Technologies</h2>
+												<p>Things and Services we use to construct the Website</p>
 											</header>
 
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/tools.jpg" alt="" /></span>
+											
+											<h4>Tools:</h4>
+											<p>	
+												<b>1.	GitHub/Visual Studio,</b>
+													We will be using GitHub or Visual Studio as these applications are compatible for team projects and what we are most familiar with.
+													Moreover, these apps provide free local hosting service for working and updating the web while in the developing process. 
+													<br>
+												<b>2.	Text Editor (Notepad ++, Atom.io, etc) </b>
+													This tool is very essential in the making of this project because editor is like the control panel of our website. 
+													The code, page layout and functions are everything set in the text editor. In other words, without this tool we can’t edit the appearance and how our website works.
+													<br>	
+												<b>3.	Open Source Template</b>
+													We are planning to use template for our website instead of creating it from scratch.
+													However, it is way easier to use templates because we already got the design and it is only matter of changing the text inside it. 
+													<b>(html5up.com/templated.co)</b>
+													<br>
+												<b>4.	Bootstrap </b>
+													Bootstrap is to provide functions in our website. 
+													In order to make our website more interactive and arranged this tool is very essential. 
+													By collaborating it with the text editor, we will get maximum function of this tool called Bootstrap.
+													<b>(bootstrap4.com)</b>
+											</p>
 
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+											<h4>Technologies:</h4>
+											<p>
+												<b>1.	Website Hosting Service</b>
+													After all is done and we are sure that the website is adequately developed, the next step is to think about using a Web Hosting Service. 
+													A service that allows us to release the website we made to public so that everybody all around the world can see and surf in our web. 
+													There are 3 leading hosting companies which are Blue Host, HostGator and, Hostinger.com. 
+													<br>
+												<b>2.	Clouds (GitHub)</b>
+													The Cloud technology held a huge role in this web making since we are using GitHub for our project. 
+													Pushing and Pulling works to the GitHub repository in GitHub app is one example of the Cloud technology.
+											</p>
 
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
 										</article>
 
 								</div>
