--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
+					<span class="image featured"><img src="images/home.jpg" alt="" /></span>
 
 				</section>
 
@@ -80,8 +81,7 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>A gigantic heading you can use for whatever</h2>
-							<p>With a much smaller subtitle hanging out just below it</p>
+							<h2>IT Technologies</h2>
 						</header>
 					</div>
 				</section>
@@ -94,8 +94,9 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Autonomous Vehicles</h3>
+										<p>Autonomous vehicles are motorized vehicles that are embedded with a wide variety of sensors and receivers...</p>
+										<a href="autonomous-vehicles.html">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -103,8 +104,9 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Clouds, Servers and Services</h3>
+										<p>Clouds is basically an invisible storage that stores your data on the internet.This cloud technology is not...</p>
+										<a href="clouds-servers-services.html">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -114,8 +116,9 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Machine Learning</h3>
+										<p>Machine learning is a subset of artificial intelligence that has become popular and ubiquitous in recent times.</p>
+										<a href="machine-learning.html">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -123,22 +126,13 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Natural Language Processing and Chatterbots</h3>
+										<p>Natural language processing or NLP is the bridging between human language and computer language allowing computers to...</p>
+										<a href="natural-language-processing-and-chatterbots.html">Learn more</a>
 									</div>
 								</div>
 							</section>
 						</div>
-					</div>
-				</section>
-
-			<!-- CTA -->
-				<section id="cta" class="wrapper style3">
-					<div class="container">
-						<header>
-							<h2>Are you ready to continue your quest?</h2>
-							<a href="#" class="button">Insert Coin</a>
-						</header>
 					</div>
 				</section>
 
