--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/home-autonomous-vehicles.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Autonomous Vehicles</h3>
 										<p>Autonomous vehicles are motorized vehicles that are embedded with a wide variety of sensors and receivers...</p>
@@ -101,7 +101,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/home-cloud.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Clouds, Servers and Services</h3>
 										<p>Clouds is basically an invisible storage that stores your data on the internet.This cloud technology is not...</p>
@@ -113,7 +113,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/home-machine-learning.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Machine Learning</h3>
 										<p>Machine learning is a subset of artificial intelligence that has become popular and ubiquitous in recent times.</p>
@@ -123,7 +123,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/home-natural-learning-process.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Natural Language Processing and Chatterbots</h3>
 										<p>Natural language processing or NLP is the bridging between human language and computer language allowing computers to...</p>
