--- a/index.html
+++ b/index.html
@@ -73,6 +73,30 @@
 								</div>
 							</section>
 						</div>
+						
+						<div class="row gtr-200">
+							<section class="col-4 col-12-narrower">
+								<div class="box highlight">
+									<i class="icon solid major fa-paper-plane"></i>
+									<h3>This Is Important</h3>
+									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+								</div>
+							</section>
+							<section class="col-4 col-12-narrower">
+								<div class="box highlight">
+									<i class="icon solid major fa-pencil-alt"></i>
+									<h3>Also Important</h3>
+									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+								</div>
+							</section>
+							<section class="col-4 col-12-narrower">
+								<div class="box highlight">
+									<i class="icon solid major fa-wrench"></i>
+									<h3>Probably Important</h3>
+									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+								</div>
+							</section>
+						</div>
 					</div>
 				</section>
 
@@ -116,7 +140,7 @@
 									<a href="#" class="image left"><img src="images/home-machine-learning.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Machine Learning</h3>
-										<p>Machine learning is a subset of artificial intelligence that has become popular and ubiquitous in recent times.</p>
+										<p>Machine learning is a subset of artificial intelligence that has become popular and ubiquitous in recent times...</p>
 										<a href="machine-learning.html">Learn more</a>
 									</div>
 								</div>
