--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
 						<div class="row gtr-200">
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
+								</div>
+							</section>
+							<section class="col-4 col-12-narrower">
+								<div class="box highlight">
 									<i class="icon solid major fa-paper-plane"></i>
 									<h3>Group Reflection</h3>
 									<p>Both individual and group reflections of our performance as a team throughout this assignment.</p>
