--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 						<div class="row gtr-200">
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-paper-plane"></i>
+									<a href="#" class="image left"><img src="images/Icon1.jpg" alt="" /></a>
 									<h3>Team Profile</h3>
 									<p>A breakdown of the memebers in our team and our results from a variety of personality type tests.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-pencil-alt"></i>
+									<a href="#" class="image left"><img src="images/Icon2.jpg" alt="" /></a>
 									<h3>Ideal Jobs</h3>
 									<p>A comparison of the ideal jobs that our team members are all aiming to get into in years to come.</p>
 								</div>
@@ -77,21 +77,21 @@
 						<div class="row gtr-200">
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-pencil-alt"></i>
+									<a href="#" class="image left"><img src="images/Icon4.jpg" alt="" /></a>
 									<h3>Industry Data</h3>
 									<p>A more in depth analysis of the ideal jobs our team is amaing for and the industries that these jobs are part of.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-wrench"></i>
+									<a href="#" class="image left"><img src="images/Icon5.jpg" alt="" /></a>
 									<h3>IT Work</h3>
 									<p>Our research into the IT industry and an interview of one of the many people in this industry.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-paper-plane"></i>
+									<a href="#" class="image left"><img src="images/Icon6.jpg" alt="" /></a>
 									<h3>Group Reflection</h3>
 									<p>Both individual and group reflections of our performance as a team throughout this assignment.</p>
 								</div>
