--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
 								</div>
 							</section>
 						</div>
-						
+					</div>
+				</section>
+			
+			<section class="wrapper style1">
+					<div class="container">
 						<div class="row gtr-200">
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
