--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<a href="#" class="image left"><img src="images/Icon3.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/Icon3.JPG" alt="" /></a>
 									<h3>Tools</h3>
 									<p>A summary of the tools that our team used to create this site, our report and to compile this assignment as a whole..</p>
 								</div>
