--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<a href="#" class="image left"><img src="images/Icon1.jpg" alt="" /></a>
-									<h3>Team Profile</h3>
+									<h3><a href="team-profile.html">Team Profile</a></h3>
 									<p>A breakdown of the memebers in our team and our results from a variety of personality type tests.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<a href="#" class="image left"><img src="images/Icon2.jpg" alt="" /></a>
-									<h3>Ideal Jobs</h3>
+									<h3><a href="ideal-jobs.html">Ideal Jobs</a></h3>
 									<p>A comparison of the ideal jobs that our team members are all aiming to get into in years to come.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<a href="#" class="image left"><img src="images/Icon3.JPG" alt="" /></a>
-									<h3>Tools</h3>
+									<h3><a href="tools.html">Tools</a></h3>
 									<p>A summary of the tools that our team used to create this site, our report and to compile this assignment as a whole..</p>
 								</div>
 							</section>
@@ -89,14 +89,14 @@
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<a href="#" class="image left"><img src="images/Icon5.jpg" alt="" /></a>
-									<h3>IT Work</h3>
+									<h3><a href="industry-data.html">Industry Data</a></h3>
 									<p>Our research into the IT industry and an interview of one of the many people in this industry.</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<a href="#" class="image left"><img src="images/Icon6.jpg" alt="" /></a>
-									<h3>Group Reflection</h3>
+									<h3><a href="group-reflection.html">Group Reflection</a></h3>
 									<p>Both individual and group reflections of our performance as a team throughout this assignment.</p>
 								</div>
 							</section>
